kubernetes-production-lab/manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production-lab
  labels:
    app.kubernetes.io/part-of: production-lab
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
